--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -5,8 +5,9 @@ body {
 	flex-direction: column;/*sticky footer*/
 	margin: 0;
 	scroll-behavior: smooth;
-	font-family: '';
+	font-family: 'Roboto';
 	font-weight: 400;
+	font-size: 16px;
  }
 html{
 	font-size: 10px;
