--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -7,7 +7,9 @@ body {
 	scroll-behavior: smooth;
 	font-family: 'Roboto';
 	font-weight: 400;
+	color: #231F20;
 	font-size: 16px;
+	line-height: 22px;
  }
 html{
 	font-size: 10px;
@@ -23,8 +25,13 @@ button{
 	cursor: pointer;
 }
 .container{
-	max-width: 137rem;
+	max-width: 121rem;
 	margin: 0 auto;
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
+}
+.card__title{
+	margin-bottom: 2.4rem;
+	font-size: 3.2rem;
+	font-weight: 500;
 }
