--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -35,3 +35,11 @@ button{
 	font-size: 3.2rem;
 	font-weight: 500;
 }
+.basket{
+	display: block;
+	position: relative;
+	border-radius: 12px;
+	text-align: right;
+	background:  #397479;
+	color: #fff;
+}
