--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -36,27 +36,80 @@
     min-width: 215px;
 }
 .header__center-catalog {
-    padding: 1.4rem 2.7rem 1rem 3rem;
+    padding-right: 2.5rem;
     width: 15rem;
-    position: relative;
+    height: 5.2rem;
     background-color: #fff;
     border-radius: 1.2rem;
     color: #397479;
-    line-height: 22px;
-    text-align: center;
+    line-height: 5.2rem;
+    text-align: right;
     cursor: pointer;
 }
-.header__center-catalog::before{
+.header__center-catalog--btn{
+    position: relative;
+    width: 20px;
+    height: 2px;
+    background: #397479;
+    top: 26px;
+    left: 24px;
+}
+.header__center-catalog--btn::before,
+.header__center-catalog--btn::after{
     position: absolute;
     content: '';
-    width: 2.4rem;
-    height: 2.4rem;
-    background: url('../images/icon/Catalogue.svg') no-repeat;
-    top: 14px;
-    left: 30px;
+    width: 20px;
+    height: 2px;
+    left: 0;
+    background: #397479;
 }
-.header__center-catalog div{
-    transform: translate(12px , 2px);
+.header__center-catalog--btn::before{
+    top: -6px;
+    transition: all .2s ease-in;
+}
+.header__center-catalog--btn::after{
+    bottom: -6px;
+    transition: all .2s ease-in;
+}
+.header__center-catalog.catalog-menu .header__center-catalog--btn::after{
+    transform: rotate(45deg);
+    bottom: 0;
+    transition: all .2s ease-in;
+}
+.header__center-catalog.catalog-menu .header__center-catalog--btn::before{
+    transform: rotate(-45deg);
+    top: 0; 
+    transition: all .2s ease-in;
+}
+.header__center-catalog.catalog-menu .header__center-catalog--btn{
+    background: transparent;
+    transition: all .2s ease-in;
+}
+.sub-menu {
+    padding: 2.4rem;
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 118rem;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    column-gap: 9.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 12px;
+    border: 2px solid rgba(57, 116, 121, 0.40);
+    background: #FFF;
+    display: none;
+    z-index: 2;
+}
+.sub-menu li{
+    margin-bottom: 1.2rem;
+    width: 17.5rem;
+    font-weight: 500;
+}
+.menu-catalog{
+    display: flex;
 }
 .header-form {
     width: 77rem;
@@ -130,6 +183,7 @@
 }
 .menu__list {
     display: flex;
+    padding-left: 0;
 }
 .menu__list-item + .menu__list-item{
     margin-left: 2.4rem;
