--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,5 +9,9 @@
 @import 'modal';
 @import 'home';
 @import 'slider';
+@import 'news';
+@import 'about';
+@import 'product';
+@import 'news-details';
 
 
