--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,6 +1,12 @@
+.header{
+    background-image: url('../images/bg.jpg');
+    background-size: cover;
+    background-position: center;
+}
 .header__wrapper{
-    background: linear-gradient(153deg, #397479 0%, #699C9B 100%);
+    // background: linear-gradient(153deg, #397479 0%, #699C9B 100%);
     padding-bottom: 2.4rem;
+   
 }
 .header__top {
     padding-top: 2.5rem;
@@ -179,7 +185,8 @@
     background-color: #fff;
 }
 .menu {
-    max-width: 60rem;
+    // max-width: 60rem;
+    width: 100%;
 }
 .menu__list {
     display: flex;
@@ -192,7 +199,10 @@
     color: #231F20;
 }
 .header-block {
-    background: linear-gradient(153deg, #397479 0%, #699C9B 100%);
+    // background: linear-gradient(153deg, #397479 0%, #699C9B 100%);
+    background-image: url('../images/bg.jpg');
+    background-size: cover;
+    background-position: center;
 }
 .header__inner{
     display: flex;
