--- a/app/scss/_search.scss
+++ b/app/scss/_search.scss
@@ -151,3 +151,9 @@
     column-gap: 2.4rem;
     row-gap: 4rem;
 }
+.search__wrapper-filter{
+    display: none;
+}
+.sidebar--mobile{
+    display: none;
+}
