--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -90,10 +90,10 @@
 
 //MAILING
 .mailing{
-    padding-top: 11.5rem;
-    padding-bottom: 11.5rem;
+    padding-top: 4.5rem;
+    padding-bottom: 4.5rem;
     // background: linear-gradient(153deg, #397479 0%, #699C9B 100%);
-    background-image: url('../images/bg.jpg');
+    background-image: url('../images/Frame 15.jpg');
     background-size: cover;
 }
 .mailing-block {
